[metadata]
name = o365spray
version = attr: o365spray.__init__.__version__
description = Microsoft O365 User Enumerator and Password Sprayer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xZDH/o365spray
author = 0xZDH
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires =
    beautifulsoup4>=4.11.1
    colorama>=0.4.5
    lxml>=4.9.1
    requests>=2.22.0
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    o365spray = o365spray.__main__:main
